<resources>
    <string name="app_name">PLeon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">로그인</string>

    <string name="phone_fragment_title">본인인증을 위해\n휴대폰번호를 입력해주세요.</string>
    <string name="phone_fragment_phone_hint">010-XXXX-XXXX</string>
    <string name="phone_fragment_btn">인증문자 보내기</string>

    <string name="phone_fragment_code_title">본인인증을 위해\n인증 번호를 입력해주세요.</string>
    <string name="phone_fragment_code_hint">인증 번호 입력</string>
    <string name="phone_fragment_code_btn">인증 확인</string>

    <string name="phone_fragment_help_text">인증번호를 받지 못하셨나요?</string>
    <string name="phone_fragment_resend">인증문자 다시 보내기</string>

    <string name="nickname_fragment_title">사용하실 닉네임을\n입력해주세요 :) </string>
    <string name="nickname_fragment_hint">닉네임 입력</string>


    <string name="welcome_fragment_btn">시작하기</string>

    <string name="login_fragment_kakao">카카오 계정으로 로그인</string>
    <string name="login_fragment_phone">휴대폰 번호로 로그인</string>

    <string name="welcome_fragment_bubble_txt">안녕하세요!\n당신의 반려식물 케어를 도와줄 PLeon입니다 :)</string>

    <string name="login_fail_msg">로그인에 실패하였습니다.</string>
    <string name="login_success_msg">로그인에 성공하였습니다.</string>
</resources>