<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/phone_fragment_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.PhoneFragment">
    <ImageView
        android:id="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="5dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitStart"
        android:layout_marginTop="14dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#2d2d2d"
        style="@style/LoginTitleText"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        android:text="@string/phone_fragment_title"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LoginEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_title"
        app:layout_constraintBottom_toTopOf="@+id/phone_btn"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:inputType="numberSigned"
        android:hint="@string/phone_fragment_phone_hint"
        android:digits="0123456789-"
        android:maxLength="13"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/phone_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_main_green"
        style="@style/LoginButtonText"
        android:text="@string/phone_fragment_btn" />
    <TextView
        android:id="@+id/code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#2d2d2d"
        android:visibility="gone"
        style="@style/LoginTitleText"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        android:text="@string/phone_fragment_code_title"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/code_et"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberSigned"
        style="@style/LoginEditText"
        android:hint="@string/phone_fragment_code_hint"
        android:digits="0123456789"
        android:maxLength="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_title"
        app:layout_constraintBottom_toTopOf="@+id/phone_btn"
        app:layout_goneMarginBottom="72dp"
        android:textCursorDrawable="@drawable/cursor_drawable"/>
    <TextView
        android:id="@+id/help_tv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LoginHelpText"
        android:text="@string/phone_fragment_help_text"
        android:layout_marginBottom="30dp"
        app:layout_goneMarginBottom="102dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/phone_btn" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/code_btn"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_green_selector"
        style="@style/LoginButtonText"
        android:text="@string/phone_fragment_code_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>