<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_img"
            android:layout_width="128dp"
            android:layout_height="143dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/kakao_login_btn"
            android:src="@drawable/img_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_img"
            android:layout_marginTop="20dp"
            style="@style/AppLogo"
            android:text="@string/app_name"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kakao_login_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toTopOf="@+id/phone_login_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/button_kakao_login_selector"
            android:paddingHorizontal="60dp"
            android:drawableLeft="@drawable/ic_login_kakao"
            style="@style/KakaoButtonText"
            android:text="@string/login_fragment_kakao" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/phone_login_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="35dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/button_phone_login_selector"
            style="@style/PhoneButtonText"
            android:text="@string/login_fragment_phone" />
        <com.certified.customprogressindicatorlibrary.CustomProgressIndicator
            android:id="@+id/indicator"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
